// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerNative Snapshots default snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="timepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--time incomplete"
            id="1"
            required=""
            step="3600"
            type="time"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-history-outlined no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.0059-4.3647c.2294 0 .4118-.1765.4118-.4118V4.2588c0-.2294-.1824-.4059-.4118-.4059s-.4059.1765-.4059.406v3.5588H4.9235c-.2353 0-.4117.1764-.4117.4058 0 .2353.1764.4118.4117.4118h3.0706Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimePickerNative Snapshots prop: times TimePickerNative times snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
}

.c1 select,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  color: var(--bds-color-text-primary);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 select {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  height: 100%;
  padding-left: var(--bds-sizes-size-16);
  padding-right: var(--bds-sizes-size-40);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
}

.c1.item--before select {
  padding-left: var(--bds-sizes-size-40);
}

.c1 .item--before {
  position: absolute;
  top: var(--bds-sizes-size-16);
  left: var(--bds-sizes-size-16);
}

.c1 .item--after {
  position: absolute;
  top: var(--bds-sizes-size-16);
  right: var(--bds-sizes-size-16);
}

.c1.size--small .item--after,
.c1.size--small .item--before {
  top: var(--bds-sizes-size-14);
}

.c1.size--large .item--after,
.c1.size--large .item--before {
  top: var(--bds-sizes-size-20);
}

.c1.size--jumbo .item--after,
.c1.size--jumbo .item--before {
  top: 1.375rem;
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c1.stacked label.input-label.incomplete,
.c1.stacked label.input-label.interaction--completed,
.c1.stacked label.input-label.interaction--active,
.c1.stacked label.input-label.completed,
.c1.stacked label.input-label.interaction--focused {
  top: var(--bds-sizes-size-12);
  left: var(--bds-sizes-size-16);
  font-size: var(--bds-sizes-size-16);
}

.c1.stacked label.input-label.incomplete.size--small,
.c1.stacked label.input-label.interaction--completed.size--small,
.c1.stacked label.input-label.interaction--active.size--small,
.c1.stacked label.input-label.completed.size--small,
.c1.stacked label.input-label.interaction--focused.size--small {
  top: var(--bds-sizes-size-8);
}

.c1.stacked label.input-label.incomplete.size--large,
.c1.stacked label.input-label.interaction--completed.size--large,
.c1.stacked label.input-label.interaction--active.size--large,
.c1.stacked label.input-label.completed.size--large,
.c1.stacked label.input-label.interaction--focused.size--large {
  top: var(--bds-sizes-size-16);
}

.c1.stacked label.input-label.incomplete.size--jumbo,
.c1.stacked label.input-label.interaction--completed.size--jumbo,
.c1.stacked label.input-label.interaction--active.size--jumbo,
.c1.stacked label.input-label.completed.size--jumbo,
.c1.stacked label.input-label.interaction--focused.size--jumbo {
  top: var(--bds-sizes-size-20);
  font-size: var(--bds-sizes-size-20);
}

.c1.stacked .text-input-fieldset legend {
  max-width: 0.01px;
  padding: 0;
}

.c1.stacked select {
  opacity: 0;
}

.c1.stacked .input-label {
  font-weight: var(--bds-font-weight-semibold);
  color: var(--bds-color-text-primary);
}

.c1.stacked .input-label .select--value {
  margin-left: var(--bds-sizes-size-8);
  color: var(--bds-color-text-primary);
  font-weight: var(--bds-font-weight-regular);
}

.c1.stacked .input-label.state--error {
  color: var(--bds-color-text-red);
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed,
.c5.completed {
  border-color: var(--bds-color-border-default);
}

.c5.interaction--active.completed {
  border-color: var(--bds-color-border-interactive);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend,
.c5.size--medium.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span,
.c5.size--medium.completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend,
.c5.size--small.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span,
.c5.size--small.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend,
.c5.size--large.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span,
.c5.size--large.completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend,
.c5.size--jumbo.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span,
.c5.size--jumbo.completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon path,
.c3 svg.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: 14px;
  width: 14px;
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed {
  top: -12px;
  left: 16px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed {
  top: -12px;
  left: 16px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed {
  top: -12px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

@media only screen and (min-width:66.0625rem) {

}

<div
    class="timepicker-native"
  >
    <div
      class="c0 datepicker-select shape--rounded"
    >
      <div
        class="c1 backyard select--wrapper shape--rounded size--medium"
      >
        <label
          class="c2 input-label size--medium state--default incomplete interaction--completed"
          for="2"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--completed"
        >
          <select
            aria-label="2"
            class="select--input completed"
            id="2"
          >
            <option
              class="select-option"
              disabled=""
              value=""
            >
              Select a time
            </option>
            <option
              class="select-option"
              value="08:00"
            >
              Morning 8:00 AM
            </option>
            <option
              class="select-option"
              value="09:15"
            >
              Morning 9:15 AM
            </option>
            <option
              class="select-option"
              disabled=""
              value="09:45"
            >
              Morning 9:45 AM
            </option>
            <option
              class="select-option"
              value="10:15"
            >
              Morning 10:15 AM
            </option>
            <option
              class="select-option"
              value="11:15"
            >
              Morning 11:15 AM
            </option>
            <option
              class="select-option"
              value="12:00"
            >
              Noon 12:00 PM
            </option>
            <option
              class="select-option"
              disabled=""
              value="13:15"
            >
              Afternoon 1:15 PM
            </option>
            <option
              class="select-option"
              value="13:45"
            >
              Afternoon 1:45 PM
            </option>
            <option
              class="select-option"
              disabled=""
              value="15:00"
            >
              Afternoon 3:00 PM
            </option>
            <option
              class="select-option"
              value="18:00"
            >
              Evening 5:00 PM
            </option>
            <option
              class="select-option"
              value="18:45"
            >
              Evening 5:45 PM
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="c4 icon icon-history-outlined select--arrow item--after no-interaction"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.0059-4.3647c.2294 0 .4118-.1765.4118-.4118V4.2588c0-.2294-.1824-.4059-.4118-.4059s-.4059.1765-.4059.406v3.5588H4.9235c-.2353 0-.4117.1764-.4117.4058 0 .2353.1764.4118.4117.4118h3.0706Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium closed incomplete interaction--completed"
          >
            <legend>
              <span />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimePickerNative Snapshots themes TimePickerNative dark theme snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,100%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="timepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--time incomplete"
            id="1"
            required=""
            step="3600"
            type="time"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-history-outlined no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.0059-4.3647c.2294 0 .4118-.1765.4118-.4118V4.2588c0-.2294-.1824-.4059-.4118-.4059s-.4059.1765-.4059.406v3.5588H4.9235c-.2353 0-.4117.1764-.4117.4058 0 .2353.1764.4118.4117.4118h3.0706Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimePickerNative Snapshots themes TimePickerNative light theme snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="timepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--time incomplete"
            id="1"
            required=""
            step="3600"
            type="time"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-history-outlined no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.0059-4.3647c.2294 0 .4118-.1765.4118-.4118V4.2588c0-.2294-.1824-.4059-.4118-.4059s-.4059.1765-.4059.406v3.5588H4.9235c-.2353 0-.4117.1764-.4117.4058 0 .2353.1764.4118.4117.4118h3.0706Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimePickerNative Snapshots with helper text 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0.error input {
  border-color: hsl(350,73%,35%,1);
}

.c0.error input:focus + label,
.c0.error input:active + label {
  color: hsl(350,73%,35%,1);
}

.c0.error label {
  color: hsl(350,73%,35%,1);
}

.c0.error .helper-text {
  color: hsl(350,73%,35%,1);
}

.c0.success input {
  border-color: hsl(142,86%,28%,1);
}

.c0.success input:focus + label,
.c0.success input:active + label {
  color: hsl(142,86%,28%,1);
}

.c0.success label {
  color: hsl(142,86%,28%,1);
}

.c0.success .helper-text {
  color: hsl(142,86%,28%,1);
}

.c0.warning input {
  border-color: hsl(350,73%,35%,1);
}

.c0.warning input:focus + label,
.c0.warning input:active + label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning .helper-text {
  color: hsl(0,0%,0%,.87);
}

.c8 {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  color: hsl(0,0%,0%,.87);
  font-size: var(--bds-font-tag-helper-text-mobile-font-size);
  line-height: var(--bds-font-tag-helper-text-mobile-line-height);
}

.c7 {
  margin: 0;
  padding-top: 0.25rem;
}

.c7 .typography {
  color: hsl(0,0%,0%,.60);
}

.c7 .typography .icon path {
  fill: hsl(0,0%,0%,.60);
}

.c7 .icon {
  vertical-align: text-top;
}

.c7 .helper-text-icon {
  margin-right: 0.5rem;
}

.c7.c7.indent .typography {
  padding-left: var(--helper-text-indent);
}

.c7.c7.disabled .typography {
  color: hsl(0,0%,0%,.30);
}

.c7.c7.disabled .typography .icon path {
  fill: hsl(0,0%,0%,.30);
}

.c7.error .typography {
  color: hsl(350,73%,35%,1);
}

.c7.error .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c7.success .typography {
  color: hsl(142,86%,28%,1);
}

.c7.success .typography .icon path {
  fill: hsl(142,86%,28%,1);
}

.c7.warning .typography {
  color: hsl(350,73%,35%,1);
}

.c7.warning .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c7.info .typography {
  color: hsl(213,84%,45%,1);
}

.c7.info .typography .icon path {
  fill: hsl(213,84%,45%,1);
}

.c5 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c5:not(.color-override) g,
.c5:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c5:not(.color-override) g[stroke-width],
.c5:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c5:not(.color-override) g[stroke-width] *,
.c5:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c5.start {
  margin-right: var(--bds-sizes-size-8);
}

.c5.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  width: calc(3.75rem * 5);
}

.c1 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c1 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c1 .no-interaction {
  pointer-events: none;
}

.c1.c1.c1 .icon--after,
.c1.c1.c1.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c1.c1.c1 .icon--after .picker-clear-button,
.c1.c1.c1.icon--after .picker-clear-button,
.c1.c1.c1 .icon--after.picker-clear-button,
.c1.c1.c1.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c1.c1.c1 .icon--after .picker-clear-button .icon.icon.icon path,
.c1.c1.c1.icon--after .picker-clear-button .icon.icon.icon path,
.c1.c1.c1 .icon--after.picker-clear-button .icon.icon.icon path,
.c1.c1.c1.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c1.c1.c1 .icon--after.picker-clear-button,
.c1.c1.c1.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c1 input::-webkit-inner-spin-button,
.c1 input::-webkit-clear-button,
.c1 input::-ms-clear {
  display: none;
}

.c1 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c1 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c1 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c1 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c2 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c2 input,
.c2 textarea,
.c2 legend,
.c2 label,
.c2 span,
.c2 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c2 input.disabled,
.c2 textarea.disabled,
.c2 legend.disabled,
.c2 label.disabled,
.c2 span.disabled,
.c2 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c2 svg {
  box-sizing: border-box;
}

.c2 input,
.c2 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c2.item--before input {
  padding: 0;
}

.c2 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c2 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c2 .item--before.icon path,
.c2 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c2 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c2 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c2 .item--after.icon path,
.c2 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c2.state--success svg.icon--success,
.c2.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c2.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c2.has--placeholder label {
  display: none;
}

.c2.has--placeholder legend {
  display: none;
}

.c3 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c3.with-icon-before {
  left: 40px;
}

.c3.interaction--focused,
.c3.interaction--active,
.c3.interaction--completed,
.c3.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c3.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c3.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c3.size--small.interaction--focused,
.c3.size--small.interaction--active,
.c3.size--small.interaction--completed,
.c3.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c3.size--large {
  top: 16px;
}

.c3.size--large.interaction--focused,
.c3.size--large.interaction--active,
.c3.size--large.interaction--completed,
.c3.size--large.completed {
  top: -12px;
  left: 21px;
}

.c3.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c3.size--jumbo.interaction--focused,
.c3.size--jumbo.interaction--active,
.c3.size--jumbo.interaction--completed,
.c3.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c3.state--error {
  color: var(--bds-color-text-red);
}

.c3.hidden-label {
  opacity: 0;
}

.c6 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c6 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c6 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c6.interaction--focused legend,
.c6.interaction--active legend,
.c6.interaction--completed legend,
.c6.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c6.interaction--focused legend span,
.c6.interaction--active legend span,
.c6.interaction--completed legend span,
.c6.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.interaction--focused,
.c6.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c6.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c6.size--medium {
  height: var(--bds-sizes-size-48);
}

.c6.size--medium.interaction--focused legend,
.c6.size--medium.interaction--active legend,
.c6.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c6.size--medium.interaction--focused legend span,
.c6.size--medium.interaction--active legend span,
.c6.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.size--small {
  height: var(--bds-sizes-size-40);
}

.c6.size--small.interaction--focused legend,
.c6.size--small.interaction--active legend,
.c6.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c6.size--small.interaction--focused legend span,
.c6.size--small.interaction--active legend span,
.c6.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.size--large {
  height: var(--bds-sizes-size-56);
}

.c6.size--large.interaction--focused legend,
.c6.size--large.interaction--active legend,
.c6.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c6.size--large.interaction--focused legend span,
.c6.size--large.interaction--active legend span,
.c6.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c6.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c6.size--jumbo.interaction--focused legend,
.c6.size--jumbo.interaction--active legend,
.c6.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c6.size--jumbo.interaction--focused legend span,
.c6.size--jumbo.interaction--active legend span,
.c6.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c4 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c4:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c4.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c4.state--error svg.icon--before path,
.c4.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c4.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c4 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c4 svg.icon.icon--success path,
.c4 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c4 svg.icon.icon--error path,
.c4 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c4 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c4.size--small input,
.c4.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large input,
.c4.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c4.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c4.size--jumbo input,
.c4.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c4 svg.icon--error + .suffix,
.c4 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

@media only screen and (min-width:66rem) {
  .c8 {
    font-size: var(--bds-font-tag-helper-text-desktop-font-size);
    line-height: var(--bds-font-tag-helper-text-desktop-line-height);
  }
}

<div
    class="c0 form-control"
  >
    <div
      class="timepicker-native"
    >
      <div
        class="c1 datepicker-text shape--rounded"
      >
        <div
          class="c2 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
        >
          <label
            class="c3 input-label size--medium state--default interaction--incomplete"
            for="3"
          />
          <div
            class="c4 form-control shape--rounded size--medium interaction--incomplete"
          >
            <input
              class="textinput type--time incomplete"
              id="3"
              required=""
              step="3600"
              type="time"
              value=""
            />
            <svg
              aria-hidden="true"
              class="c5 icon icon-history-outlined no-interaction item--after"
              role="presentation"
              style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.0059-4.3647c.2294 0 .4118-.1765.4118-.4118V4.2588c0-.2294-.1824-.4059-.4118-.4059s-.4059.1765-.4059.406v3.5588H4.9235c-.2353 0-.4117.1764-.4117.4058 0 .2353.1764.4118.4117.4118h3.0706Z"
                fill-rule="evenodd"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="c6 text-input-fieldset size--medium interaction--incomplete"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      class="c7 helper-text default indent"
    >
      <span
        class="c8 typography variant--helper align--left"
        color="text_primary"
        style="padding-left: 1rem;"
      >
        Text Input Helper
      </span>
    </span>
  </div>
</DocumentFragment>
`;
